fix button on mobile bug

--- a/home.css
+++ b/home.css
@@ -109,6 +109,7 @@ html, body {
 .btn-text {
     font-family: San-Fransisco-Medium;
     color: white;
+    font-size: calc(12px + 0.3vw);
 }
 
 .project-screenshot {
